PP-5686 - Update homepage
- Add new content and images
- Remove case-study css as we’re not using case study thing anymore

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -17,16 +17,19 @@ description: Take and process online payments from your users - GOV.UK Pay is a 
     <div class="hero hero--breaded">
         <div class="hero__content">
             <div class="hero__body">
-                <h1 class="hero__title">Take and process online payments from your&nbsp;users</h1>
+                <h1 class="hero__title">Take online payments from your&nbsp;users</h1>
                 <div class="hero__inline-image">
                     <img src="/pay-product-page/images/pay-top-image.png" alt="" role="presentation">
                 </div>
                 <p class="hero__description">
-                  GOV.UK&nbsp;Pay is a free and secure online payment service for government and public sector organisations.
+                  If you work in the public sector, use GOV.UK Pay to take&nbsp;payments
                 </p>
                 <a href="/getstarted" role="button" class="hero-button" data-click-events data-click-category="Hero" data-click-action="Button clicked">
-                    See how to get started
+                    Create a test account
                 </a>
+                <span class="hero-alternative-action">
+                  or <a href="/features" data-click-events data-click-category="Hero" data-click-action="Internal link clicked">find out what GOV.UK Pay offers</a>
+                </span>
             </div>
             <div class="hero__aside-image">
                 <img src="/pay-product-page/images/pay-top-image.png" alt="Payment screen on mobile and dashboard with refund function." role="presentation">
@@ -36,69 +39,12 @@ description: Take and process online payments from your users - GOV.UK Pay is a 
 </div>
 
 <div class="container">
-  <div class="grid-row content-section">
-      <div class="column-one-half">
-        <h2 class="content-section__title heading-medium">You can use GOV.UK&nbsp;Pay if you want to:</h2>
-            <ul class="list list-bullet">
-              <li>take online card payments and issue refunds</li>
-              <li>ensure your payment experience meets the Digital Service Standard</li>
-              <li>provide a trusted GOV.UK-branded experience</li>
-              <li>use payment processes that are fully Payment Card Industry (PCI) compliant</li>
-            </ul>
-
-            <p>GOV.UK&nbsp;Pay is free to use.</p>
-
-            <p><a href="/features" data-click-events data-click-category="Content" data-click-action="Internal link clicked">See GOV.UK&nbsp;Pay’s features and roadmap</a></p>
-        </div>
-
-        <div class="column-one-half">
-          <div class="content-section__video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/DlohjTkvFoY" frameborder="0" allowfullscreen=""></iframe></div>
-            <div class="content-section__transcript">
-              <details data-click-events data-click-category="Content" data-click-action="Details">
-                <summary class="font-xsmall"><span class="summary">Transcript of GOV.UK Pay</span></summary>
-                <p class="font-xsmall">We want to make it easier for citizens to pay for government services. It’s painful enough that you have to pay for them, but at least the choice of payment types and user experience while you go through the process should be as convenient as possible.</p>
-                <p class="font-xsmall">And then there’s the part for civil servants, or people that work in government, where we want to make it easier for them to do all the things that are connected to receiving payments. They should just be as slick, easy, and frankly as cheap as possible.</p>
-                <p class="font-xsmall">Right now central government has hundreds of direct integrations from government services straight into payment providers, which makes it very hard to launch, change, or to make changes across government. If you have a payments platform, you plug all of them into the platform, make one change across the platform, and then just switch them on across government.</p>
-                <p class="font-xsmall">It will be easier and more convenient for citizens to pay government. It will be easier to launch new government services and do the reconciliation, user support and refunds. And then we can launch new innovative stuff quite quickly and easily across government.</p>
-                <p class="font-xsmall">So here we do it once, we do it right, we do it securely, we do it with a good user experience and at a low cost.</p>
-              </details>
-          </div>
-        </div>
-    </div>
-    <div class="content-section content-section--with-top-border">
+    <div class="content-section">
       <div class="grid-row">
           <div class="column-half">
-            <h2 class="content-section__title heading-medium">Teams running services and managing payments will get:</h2>
-              <ul class="list list-bullet">
-                <li>an easy-to-use admin tool designed for efficient payment administration</li>
-                <li>easy Payment Service Provider switching without additional technical work</li>
-                <li>24/7 support from the multidisciplinary team at Government Digital Service</li>
-              </ul>
-          </div>
-          <div class="column-half">
-            <img class="content-section__image" src="/pay-product-page/images/product-page_images_transaction-screen.svg" alt="Dashboard showing a list of transactions with search filters." />
-          </div>
-      </div>
-    </div>
-    <div class="content-section content-section--with-top-border">
-      <div class="grid-row">
-          <div class="column-half">
-            <h2 class="content-section__title heading-medium">You can generate reports and issue refunds</h2>
-
-            <p>Reporting and refunds can be done using the UI or the API. You can choose full or partial refunds.</p>
-
-          </div>
-          <div class="column-half">
-            <img class="content-section__image" src="/pay-product-page/images/product-page_images_refund-screens.svg" alt="Transaction detail page showing refund options modal." />
-          </div>
-      </div>
-    </div>
-    <div class="content-section content-section--with-top-border">
-      <div class="grid-row">
-          <div class="column-half">
-            <h2 class="content-section__title heading-medium">Designed to meet user&nbsp;needs</h2>
-            <p>The payment pages are designed to work on all devices, including mobiles. They give helpful inline error messages, so users know what to do next.</p>
+            <h2 class="content-section__title heading-medium">Take payments instantly</h2>
+               <p>Use GOV.UK Pay and be ready to take online payments in&nbsp;minutes.</p>
+               <p>There are no monthly bills, setup or upgrade&nbsp;fees.</p>
           </div>
           <div class="column-half">
             <img class="content-section__image" src="/pay-product-page/images/product-page_images_user-screen.svg" alt="A user-facing payment page with entry fields for card details and a payment summary. A helpful inline error message responds to user input." />
@@ -108,76 +54,55 @@ description: Take and process online payments from your users - GOV.UK Pay is a 
     <div class="content-section content-section--with-top-border">
       <div class="grid-row">
           <div class="column-half">
-            <h2 class="content-section__title heading-medium">Take online payments with payment&nbsp;links</h2>
-            <p>Let your users make online card payments to your service, even if you don’t have a digital service. You can easily create a payment link to use in your paper forms, letters, or emails.</p>
-            <p><a href="/payment-links">Read more about payment links</a></p>
+            <h2 class="content-section__title heading-medium">Manage your payments</h2>
+            <p>Take payments, issue refunds and run reports on all your&nbsp;payments.</p>
           </div>
           <div class="column-half">
+            <img class="content-section__image" src="/pay-product-page/images/product-page_images_transaction-screen.svg" alt="Dashboard showing a list of transactions with search filters." />
+          </div>
+      </div>
+    </div>
+    <div class="content-section content-section--with-top-border">
+        <h2 class="content-section__title heading-medium">Create a hosted payment page or integrate your existing&nbsp;service</h2>
+      <div class="grid-row">
+          <div class="column-half">
+            <p>If you want to take online payments now and don’t have an online service, <a href="/payment-links">create a GOV.UK payment page</a>.</p>
             <img class="content-section__image" src="/pay-product-page/images/product-page_images_payment-link.svg" alt="A user-facing payment page with information about what the payment is about and a input box to input the price." />
           </div>
-      </div>
-    </div>
-    <div class="content-section content-section--with-top-border">
-      <div class="grid-row">
           <div class="column-half">
-            <h2 class="content-section__title heading-medium">Teams building services will get:</h2>
-            <ul class="list list-bullet">
-              <li>clear documentation on how to integrate with GOV.UK&nbsp;Pay</li>
-              <li>a modern RESTful API for payment initiation and administration</li>
-              <li>a test environment to prototype and test with your service</li>
-            </ul>
-            <p><a href="https://docs.payments.service.gov.uk" data-click-events data-click-category="Content" data-click-action="Internal link clicked">See how GOV.UK&nbsp;Pay works in our documentation</a></p>
-          </div>
-          <div class="column-half">
-            <img class="content-section__image" src="/pay-product-page/images/product-page_images_docs-screen.svg" alt="The online resource of GOV.UK&nbsp;Pay’s documentation." />
+            <p>If you <a href="#FIX-ME">integrate your online service</a>, you’ll get greater control over your&nbsp;payments.</p>
+            <img class="content-section__image" src="/pay-product-page/images/product-page_images_api_json_example.svg" alt="An screenshot of an extract of JSON code that would be used in an API call to GOV.UK Pay" />
           </div>
       </div>
     </div>
     <div class="content-section content-section--with-top-border">
       <div class="grid-row">
           <div class="column-half">
-            <h2 class="content-section__title heading-medium">Find out more about GOV.UK&nbsp;Pay</h2>
-            <p><a href="/support" data-click-events data-click-category="Content" data-click-action="Internal link clicked">Contact the team</a> to ask a question. Follow our <a href="/getstarted" data-click-events data-click-category="Content" data-click-action="Internal link clicked">guide to getting started</a> to create an account.</p>
-            <p>GOV.UK&nbsp;Pay is built and supported 24/7 by a full-time team at the Government Digital Service. The Senior Product Manager is Katie Bates. </p>
+            <h2 class="content-section__title heading-medium">Security and relevant standards built&nbsp;in</h2>
+            <p>GOV.UK Pay is robust, secure and fully Payment Card Industry (PCI) compliant.</p>
+            <p>It meets all government accessibility standards.</p>
           </div>
           <div class="column-half">
-            <img class="content-section__image" src="/pay-product-page/images/pay-team.jpg" alt="A photo of the GOV.UK&nbsp;Pay team at work." />
+            <img class="content-section__image" src="http://placekitten.com/600/400" alt="The online resource of GOV.UK&nbsp;Pay’s documentation." />
           </div>
       </div>
     </div>
     <div class="content-section content-section--with-top-border">
       <div class="grid-row">
-        <div class="column-two-thirds">
-          <h2 class="content-section__title heading-medium">GOV.UK&nbsp;Pay is already working with:</h2>
-          <div class="cf">
-            <img class="content-section__image partner-logo" src="/pay-product-page/images/logos/moj.png" alt="Ministry of Justice" />
-            <img class="content-section__image partner-logo" src="/pay-product-page/images/logos/dit.png" alt="Department for International Trade" />
-            <img class="content-section__image partner-logo" src="/pay-product-page/images/logos/home-office.png" alt="Home Office" />
-            <img class="content-section__image partner-logo" src="/pay-product-page/images/logos/fco.png" alt="Foreign and Commonwealth Office" />
-            <img class="content-section__image partner-logo" src="/pay-product-page/images/logos/mod.png" alt="Ministry of Defence" />
-          </div>
-          <div class="cf">
-            <img class="content-section__image partner-logo" src="/pay-product-page/images/logos/ccc.png" alt="Canterbury City Council" />
-            <img class="content-section__image partner-logo partner-logo-smaller" src="/pay-product-page/images/logos/kcc.png" alt="Kent County Council" />
-            <img class="content-section__image partner-logo" src="/pay-product-page/images/logos/disclosure-scotland.png" alt="Disclosure Scotland" />
-            <img class="content-section__image partner-logo" src="/pay-product-page/images/logos/nhs.png" alt="NHS" />
-          </div>
+        <div class="column-half">
+          <h2 class="content-section__title heading-medium">Used and trusted across government</h2>
+
+          <p>Partners from right across the public sector are already using GOV.UK Pay, including the NHS, MOJ, police forces and local authorities.</p>
+          <p>See all the <a href="https://www.gov.uk/performance/govuk-pay">services using GOV.UK Pay</a>.</p>
         </div>
-        <div class="column-third">
-          <aside class="case-study">
-            <h2 class="heading-medium">Case studies</h2>
-            <p>Find out <a href="https://governmentasaplatform.blog.gov.uk/2018/03/14/disclosure-barring-service/">how GOV.UK Pay helped the Disclosure and Barring Service</a> save time and reduce risk.</p>
-          </aside>
+        <div class="column-half partner-grid">
+          <img class="content-section__image partner-logo" src="/pay-product-page/images/logos/home-office.png" alt="Home Office" />
+          <img class="content-section__image partner-logo" src="/pay-product-page/images/logos/moj.png" alt="Ministry of Justice" />
+          <img class="content-section__image partner-logo" src="/pay-product-page/images/logos/dit.png" alt="Department for International Trade" />
+          <img class="content-section__image partner-logo" src="/pay-product-page/images/logos/fco.png" alt="Foreign and Commonwealth Office" />
+          <img class="content-section__image partner-logo" src="/pay-product-page/images/logos/mod.png" alt="Ministry of Defence" />
+          <img class="content-section__image partner-logo" src="/pay-product-page/images/logos/nhs.png" alt="NHS" />
         </div>
-      </div>
-      <div class="grid-row">
-          <div class="column-two-thirds">
-            <div class="panel panel-border-wide">
-              <p class="">“I’ve just had the first view of [GOV.UK&nbsp;Pay] integrated with our service. It is a really good product. We have integrated it in just 2 weeks which is astonishing and really speaks volumes about [how] well you have set the service up…”</p>
-              <p>– Service manager; UK Visas and Immigration, Home Office</p>
-            </div>
-            <p>GOV.UK&nbsp;Pay is available to all government and public sector organisations, including central government, local government and the NHS.</p>
-          </div>
       </div>
     </div>
 </div>
