Renaming featues page Using GOV.UK Pay
And adding a redirect so that we don’t break external links 😎

--- a/source/blue-badge-scheme.html.erb
+++ b/source/blue-badge-scheme.html.erb
@@ -28,7 +28,7 @@ title: Blue Badge scheme - GOV.UK Pay
         <p>GOV.UK Pay is a free and secure online payment service for government and public sector organisations. 
         <p>GOV.UK Pay provides customer-facing pages to take card payment details from users and the back-end system to process and view transactions. We use a payment service provider to take the money out of the user’s account and deposit it into your account.</p>
         <p>We comply with the Payment Card Industry Data Security Standard (PCI-DSS).</p>
-        <p>You can read more general information about GOV.UK Pay on our <a href="/">product page</a> and our <a href="/features">features page</a>. Or <a href="https://selfservice.payments.service.gov.uk/create-service/register">sign up</a> for a test account and try it for yourself.</p>
+        <p>You can read more general information about GOV.UK Pay on our <a href="/">product page</a> and our <a href="/using-govuk-pay">features page</a>. Or <a href="https://selfservice.payments.service.gov.uk/create-service/register">sign up</a> for a test account and try it for yourself.</p>
 
         <h2 class="heading-medium">Payment service provider</h2>
         <p>GOV.UK Pay has procured a payment service provider (PSP) to take and process payments. This allows you to use GOV.UK Pay without a separate payment gateway.</p>
