--- a/source/getstarted.html.erb
+++ b/source/getstarted.html.erb
@@ -28,7 +28,7 @@ title: Get started
             </h2>
             <div class="task-list-items">
               <p>GOV.UK&nbsp;Pay is available for any government or public sector organisation that wants to take card payments online.</p>
-              <p>Review GOV.UK Pay’s <a href="/features" data-click-events data-click-category="Content" data-click-action="Internal link clicked">top features and roadmap</a> and decide if it meets your service’s needs.</p>
+              <p>Review GOV.UK Pay’s <a href="/using-govuk-pay" data-click-events data-click-category="Content" data-click-action="Internal link clicked">top features and roadmap</a> and decide if it meets your service’s needs.</p>
             </div>
 
           <h2 class="task-list-section">
