--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -28,7 +28,7 @@ description: Take and process online payments from your users - GOV.UK Pay is a 
                     Create a test account
                 </a>
                 <span class="hero-alternative-action">
-                  or <a href="/features" data-click-events data-click-category="Hero" data-click-action="Internal link clicked">find out what GOV.UK Pay offers</a>
+                  or <a href="/using-govuk-pay" data-click-events data-click-category="Hero" data-click-action="Internal link clicked">find out what GOV.UK Pay offers</a>
                 </span>
             </div>
             <div class="hero__aside-image">
