--- a/source/payment-links.html.erb
+++ b/source/payment-links.html.erb
@@ -21,7 +21,7 @@ title: Payment links
       <nav class="sub-navigation" data-click-events data-click-category="Content" data-click-action="Button clicked">
         <ol itemscope itemtype="http://schema.org/ItemList">
           <li class="sub-navigation__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-            <a href="/features" itemprop="item"><span itemprop="name">Features</span></a>
+            <a href="/using-govuk-pay" itemprop="item"><span itemprop="name">Using GOV.UK Pay</span></a>
           </li>
           <li class="sub-navigation__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
             <a href="/roadmap" itemprop="item"><span itemprop="name">Roadmap</span></a>
