--- a/source/using-govuk-pay.html.erb
+++ b/source/using-govuk-pay.html.erb
@@ -1,5 +1,5 @@
 ---
-title: Features
+title: Using GOV.UK Pay
 ---
 
   <nav class="breadcrumbs" aria-label="Breadcrumbs" data-click-events data-click-category="Header" data-click-action="Breadcrumb clicked">
@@ -11,7 +11,7 @@ title: Features
               <a href="/" itemprop="item"><span itemprop="name">GOV.UK Pay</span></a>
           </li>
           <li class="breadcrumbs__item breadcrumbs__item--active" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-              <a href="#main" itemprop="item"><span itemprop="name">Features and roadmap</span></a>
+              <a href="#main" itemprop="item"><span itemprop="name">Using GOV.UK Pay</span></a>
           </li>
       </ol>
   </nav>
@@ -21,7 +21,7 @@ title: Features
       <nav class="sub-navigation" data-click-events data-click-category="Content" data-click-action="Button clicked">
         <ol itemscope itemtype="http://schema.org/ItemList">
           <li class="sub-navigation__item sub-navigation__item--active" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-            <a href="/features" itemprop="item"><span itemprop="name">Features</span></a>
+            <a href="/using-govuk-pay" itemprop="item"><span itemprop="name">Using GOV.UK Pay</span></a>
           </li>
           <li class="sub-navigation__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
             <a href="/roadmap" itemprop="item"><span itemprop="name">Roadmap</span></a>
