PP-5586 - New feature page content

--- a/source/using-govuk-pay.html.erb
+++ b/source/using-govuk-pay.html.erb
@@ -36,7 +36,7 @@ title: Using GOV.UK Pay
             <a href="/direct-debit" itemprop="item"><span itemprop="name">Direct Debit on GOV.UK Pay</span></a>
           </li>
           <li class="sub-navigation__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-            <a href="/payment-links" itemprop="item"><span itemprop="name">Payment links</span></a>
+            <a href="/payment-links" itemprop="item"><span itemprop="name">GOV.UK payment pages</span></a>
           </li>
           <li class="sub-navigation__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
             <a href="/apple-pay-and-google-pay" itemprop="item"><span itemprop="name">Using Apple Pay and Google Pay</span></a>
@@ -46,88 +46,64 @@ title: Using GOV.UK Pay
     </div>
 
       <div class="column-two-thirds">
-        <h1 class="heading-large">Features</h1>
-        <p>Use GOV.UK Pay to take online card payments.</p>
-        <p><a href="https://selfservice.payments.service.gov.uk/login" data-click-events data-click-category="Content" data-click-action="External link clicked">Create a free test account</a> to get started. Once you’re ready to take payments, you’ll need to <a href="https://docs.payments.service.gov.uk/switching_to_live/#switching-to-live" data-click-events data-click-category="Content" data-click-action="External link clicked">make your account live</a>.</p>
-        
-        <h2 class="heading-small">Pay using Direct Debit</h2>
-        <p>GOV.UK Pay is introducing Direct Debit payments.</p>
-        <p>You’ll be able to set up Direct Debit mandates for regular, one-off or variable payments. GOV.UK Pay will verify users’ bank account details for you.</p>
-        <p>We're looking for pilot partners. Get in touch at <a href="mailto:govuk-pay-support@digital.cabinet-office.gov.uk" data-click-events data-click-category="Content" data-click-action="Email link clicked">govuk-pay-support@digital.cabinet-office.gov.uk</a> if you can help.</p>
-      
-        <h2 class="heading-small">Using card payments and payment links</h2>
-        <p>You can set up payment pages that look like your digital service to take credit and debit card payments. GOV.UK Pay prepopulates some of the transaction details so users only enter their details once.</p>
-        <p>If you don't have a digital service, or you don't want to use our API, you can use payment links instead.</p>
+        <h1 class="heading-large">Using GOV.UK Pay</h1>
 
-        <p>Payment links are pages on GOV.UK. They’re easy to set up and you can customise them with a friendly URL. Payment links are useful if you usually ask for payments by sending letters or emails.</p>
-        <p>Find out more about <a href="/payment-links" data-click-events data-click-category="Content" data-click-action="Internal link clicked">payment links.</a></p>
+          <p>Anyone in the public sector can use GOV.UK Pay to take online payments. </p>
+          <p>It only takes minutes to get set up with GOV.UK Pay.</p>
+          <p>Then you can:</p>
+          <ul class="list list-bullet">
+            <li>take payments using debit cards, credit cards or digital wallets</li>
+            <li>give full or partial refunds</li>
+            <li>switch Payment Service Providers, for free, when you choose</li>
+            <li>use custom branding on your payment pages</li>
+          </ul>
 
-        <h2 class="heading-small">Free to use</h2>
-        <p>There are no costs for using GOV.UK Pay, but Payment Service Providers (<abbr title="payment service providers">PSPs</abbr>) will charge a transaction fee for payments.</p>
+          <p>GOV.UK Pay is ideal if you currently take payments using paper forms, by email or if you have an online service.</p>
+          <p><a href="https://selfservice.payments.service.gov.uk/create-service/register">Create an account for free</a> and try it yourself.</p>
 
-        <h2 class="heading-small">Take payments securely</h2>
-        <p>GOV.UK Pay complies with the Payment Card Industry Data Security Standard (PCI-DSS). We use established Payment Service Providers to process payments.</p>
-        <p>You can also choose to use 3D Secure authentication, such as Verified by Visa, to help prevent fraud.</p>
+          <h2 class="heading-medium">What GOV.UK Pay offers</h2>
 
-        <h2 class="heading-small">Choose your Payment Service Provider (PSP)</h2>
-        <p>You have 2 options.</p>
+          <h3 class="heading-small">Payment Service Provider</h3>
+          <p>You need a Payment Service Provider (PSP) to process payments. We’ve already procured Stripe as our payment provider for you. Or, you can bring your own contract with Worldpay, Barclays ePDQ or Smartpay.</p>
+          <p>If you ever want to switch PSPs you can do that without any additional technical work.</p>
 
-        <p>GOV.UK Pay has already procured Stripe, as a Payment Service Provider for you.</p>
+          <h3 class="heading-small">Refunds</h3>
+          <p>Provide full or partial refunds to your users for free </p>
 
-        <p>If you have your own PSP, GOV.UK Pay supports <abbr title="payment service providers">PSPs</abbr>:</p>
-        <ul class="list list-bullet">
-          <li>Worldpay Corporate Gateway</li>
-          <li>Barclays ePDQ</li>
-          <li>Barclays Smartpay/Adyen</li>
-        </ul>
+          <h3 class="heading-small">Security</h3>
+          <p>3D Secure 2 is available on all payments taken on GOV.UK Pay.</p>
 
-        <p>You can use an existing contract, set up a new one, or switch <abbr title="payment service providers">PSPs</abbr> without additional technical work.</p>
+          <h3 class="heading-small">Reporting</h3>
+          <p>Download transaction reports about all your payments on GOV.UK Pay.</p>
 
-        <h2 class="heading-small">Manage payments and reports</h2>
-        <p>GOV.UK Pay allows you to:</p>
-        <ul class="list list-bullet">
-          <li>control when payment is taken from a user's bank account</li>
-          <li>check the status of transactions</li>
-          <li>give full or partial refunds</li>
-          <li>add metadata to your transactions to make it easier to reconcile your payments</li>
-          <li>download transaction reports</li>
-        </ul>
+          <h3 class="heading-small">Custom branding</h3>
+          <p>Customise your payment pages with your own logos and branding.</p>
 
-        <p>You can also integrate your current income management systems with <a href="https://docs.payments.service.gov.uk/api_reference/#api-reference" data-click-events data-click-category="Content" data-click-action="External link clicked">our&nbsp;API</a>.</p>
+          <h3 class="heading-small">Send emails to users</h3>
+          <p>GOV.UK Pay can automatically send emails to your users. For example, to confirm:</p>
+          <ul class="list list-bullet">
+            <li>payments</li>
+            <li>refunds</li>
+          </ul>
+          <h3 class="heading-small">Manage your team</h3>
+          <p>Control what your team members can see and do and remove them if they leave your organisation.</p>
+          <h3 class="heading-small">Standards and support</h3>
+          <p>GOV.UK Pay has been tested against all relevant government accessibility and usability standards. It’s also:</p>
+          <ul class="list list-bullet">
+            <li>PCI compliant</li>
+            <li>supported 24/7 by the team at the Government Digital Service</li>
+            <li>offered with extensive developer documentation</li>
+          </ul>
 
-        <h2 class="heading-small">Send emails to users</h2>
-        <p>GOV.UK Pay can send emails to your users. For example, to confirm:</p>
-        <ul class="list list-bullet">
-          <li>payments</li>
-          <li>refunds</li>
-        </ul>
+          <h2 class="heading-medium">How to use GOV.UK Pay</h2>
+          <p>Use GOV.UK Pay to:</p>
+          <ul class="list list-bullet">
+            <li>instantly set up a payment page on GOV.UK </li>
+            <li>integrate with our API and generate customised payment pages for your service</li>
+          </ul>
 
-        <p>Emails are sent using <a href="https://www.notifications.service.gov.uk/" data-click-events data-click-category="Content" data-click-action="External link clicked">GOV.UK Notify</a>.</p>
-
-        <h2 class="heading-small">Manage your team</h2>
-        <p>Control what your team members can see and do. For example, you can:</p>
-        <ul class="list list-bullet">
-          <li>change permission levels for each team member</li>
-          <li>invite new team members - including people without a government  email address</li>
-          <li>remove users that have left your team</li>
-        </ul>
-
-        <h2 class="heading-small">Customise your branding</h2>
-        <p>Add your organisation’s branding to payment pages and emails instead of using the GOV.UK Pay logo.</p>
-
-        <h2 class="heading-small">Welsh translations</h2>
-        <p><a href="https://docs.payments.service.gov.uk/api_reference/#api-reference" data-click-events data-click-category="Content" data-click-action="External link clicked">Use the GOV.UK Pay API</a> to display Welsh translations of your payment pages.</p>
-        <p>You can also create payment links in Welsh.</p>
-
-        <h2 class="heading-small">Use our API</h2>
-        <p>You can use our modern RESTful API for straightforward integration. We make available a <a href="https://github.com/alphagov/pay-publicapi/blob/master/swagger/swagger.json">machine-readable swagger 2.0 definition of our API</a> which you can use for testing or to build api clients.</p>
-        <p>Find out how to <a href="https://docs.payments.service.gov.uk/api_reference/#api-reference" data-click-events data-click-category="Content" data-click-action="External link clicked">integrate with GOV.UK Pay.</a></p>
-
-        <h2 class="heading-small">Technical support</h2>
-        <p>GOV.UK Pay provides technical support from 9.30am to 5.30pm Monday to Friday. We also provide out-of-hours support for critical incidents.</p>
-
-        <h2 class="heading-medium">Queries and suggestions</h2>
-        <p>If you want to find out more about these features, or have some needs that GOV.UK Pay isn’t yet meeting, get in touch by emailing <a href="mailto:govuk-pay-support@digital.cabinet-office.gov.uk" data-click-events data-click-category="Content" data-click-action="Email link clicked">govuk-pay-support@digital.cabinet-office.gov.uk</a> or chat with us in our <a href="https://ukgovernmentdigital.slack.com/messages/govuk-pay" data-click-events data-click-category="Content" data-click-action="External link clicked">cross-government Slack channel</a>.</p>
+          <p>Use GOV.UK if you currently collect payment on paper or by email.</p>
+          <p>Integrating with our API may be better if you have an online service and you need, for example, to delay payments or issue a lot of refunds.</p>
     </div>
   </div>
 </div>
