--- a/source/govuk-payment-pages.html.erb
+++ b/source/govuk-payment-pages.html.erb
@@ -1,5 +1,5 @@
 ---
-title: Payment links
+title: GOV.UK payment pages
 ---
 
   <nav class="breadcrumbs" aria-label="Breadcrumbs" data-click-events data-click-category="Header" data-click-action="Breadcrumb clicked">
@@ -11,7 +11,7 @@ title: Payment links
               <a href="/" itemprop="item"><span itemprop="name">GOV.UK Pay</span></a>
           </li>
           <li class="breadcrumbs__item breadcrumbs__item--active" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-              <a href="#main" itemprop="item"><span itemprop="name">Payment links</span></a>
+              <a href="#main" itemprop="item"><span itemprop="name">GOV.UK payment pages</span></a>
           </li>
       </ol>
   </nav>
@@ -36,7 +36,7 @@ title: Payment links
             <a href="/direct-debit" itemprop="item"><span itemprop="name">Direct Debit on GOV.UK Pay</span></a>
           </li>
           <li class="sub-navigation__item sub-navigation__item--active" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-            <a href="/payment-links" itemprop="item"><span itemprop="name">Payment links</span></a>
+            <a href="/govuk-payment-pages" itemprop="item"><span itemprop="name">GOV.UK payment pages</span></a>
           </li>
           <li class="sub-navigation__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
             <a href="/apple-pay-and-google-pay" itemprop="item"><span itemprop="name">Using Apple Pay and Google Pay</span></a>
@@ -45,9 +45,7 @@ title: Payment links
       </nav>
     </div>
     <div class="column-two-thirds">
-      <h1 class="heading-large">
-        Payment links
-      </h1>
+      <h1 class="heading-large">Take payments instantly</h1>
 
       <p>Payment links allow your service to receive online payments from your users. You don’t need to have a digital service to use payment links.</p>
 
