--- a/source/payment-service-provider.html.erb
+++ b/source/payment-service-provider.html.erb
@@ -36,7 +36,7 @@ title: GOV.UK Pay’s Payment Service Provider
             <a href="/direct-debit" itemprop="item"><span itemprop="name">Direct Debit on GOV.UK Pay</span></a>
           </li>
           <li class="sub-navigation__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-            <a href="/payment-links" itemprop="item"><span itemprop="name">Payment links</span></a>
+            <a href="/govuk-payment-pages" itemprop="item"><span itemprop="name">GOV.UK payment pages</span></a>
           </li>
           <li class="sub-navigation__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
             <a href="/apple-pay-and-google-pay" itemprop="item"><span itemprop="name">Using Apple Pay and Google Pay</span></a>
@@ -78,7 +78,7 @@ title: GOV.UK Pay’s Payment Service Provider
           <li>can be ready to take payments in minutes</li>
           <li>can use the payment link wherever you need to take payment - so on an email, letter or paper form</li>
         </ul>
-        <p>Follow our <a href="/payment-links" data-click-events data-click-category="Content" data-click-action="Internal link clicked">guide to creating payment links</a>.</p>
+        <p>Follow our <a href="/govuk-payment-pages" data-click-events data-click-category="Content" data-click-action="Internal link clicked">guide to creating payment links</a>.</p>
 
         <h2 class="heading-medium">How we procured our PSP</h2>
         <p>The PSP we’ve procured is a direct award on a Crown Commercial Service framework.</p>
