--- a/source/apple-pay-and-google-pay.html.erb
+++ b/source/apple-pay-and-google-pay.html.erb
@@ -36,7 +36,7 @@ title: Using Apple Pay and Google Pay
             <a href="/direct-debit" itemprop="item"><span itemprop="name">Direct Debit on GOV.UK Pay</span></a>
           </li>
           <li class="sub-navigation__item" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
-            <a href="/payment-links" itemprop="item"><span itemprop="name">Payment links</span></a>
+            <a href="/govuk-payment-pages" itemprop="item"><span itemprop="name">GOV.UK payment pages</span></a>
           </li>
           <li class="sub-navigation__item sub-navigation__item--active" itemprop="itemListElement" itemscope itemtype="http://schema.org/ListItem">
             <a href="/apple-pay-and-google-pay" itemprop="item"><span itemprop="name">Using Apple Pay and Google Pay</span></a>
